# pydist

./: README.md  noxfile.py  pyproject.toml
src/pydist/: __init__.py
tests/: create_example_dist.R  influenza_incubation.rds  invalid_distribution.rds  test_core_functions.py
