[build-system]
requires = ["hatchling ~= 1.18"]
build-backend = "hatchling.build"

[project]
name = "pydist"
version = "0.1"
dependencies = [
  "rdata ~= 0.11",
  "scipy ~= 1.14",
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-cov ~= 4.0',
]

[tool.ruff]
line-length = 78
target-version = "py310"

[tool.ruff.lint]
# Enable pyflakes (F), pycodestyle (E, W), flake8-bugbear (B), pyupgrade (UP),
# flake8-debugger (T10), and NumPy (NPY).
select = ["F", "E", "W", "B", "UP", "T10", "NPY"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.hatch.build.targets.sdist]
only-include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing"
